--- a/css/styles.css
+++ b/css/styles.css
@@ -566,7 +566,68 @@ a.logo-marg {
 .social-media-link-footer:is(:hover, :focus) {
 	background-color: #31D0AA;
 }
+.subscribe-header{
+	font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color:var(--white-color);
+margin-bottom: 16px;
 
+}
+.input-subscribe{
+width: 264px;
+height: 40px;
+border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+outline: transparent;
+background-color: transparent;
+padding-top: 8px;
+padding-bottom: 8px;
+padding-left: 16px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+color: var(--white-color);
+}
+.input-subscribe::placeholder{
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: #8E8F99;
+	}
+	.input-subscribe:focus{
+		border-color: var(--active-color);}
+	.subscribe-btn{
+		width: 165px;
+		height: 40px;
+			padding: 8px 24px;
+			border: none;
+			margin-left: 24px;
+				background: var(--primary-color);
+			box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+			border-radius: 4px;
+			color: var(--white-color);
+			transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);	
+	}
+	.btn-group{
+		display: flex;
+		justify-content: center;
+	}
+.send-icon{
+	fill: var(--white-color);
+	margin-left: 16px;
+}
+.subscribe-btn:is(:hover, :focus) {
+	background-color: var(--active-color);
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+		0px 2px 2px rgba(0, 0, 0, 0.12);
+	color: var(--white-color);
+	border-color: transparent;
+	}
+
+
+/* ---------------------Modal---------------------- */
 .backdrop {
 	width: 100%;
 	height: 100%;
@@ -580,7 +641,7 @@ a.logo-marg {
 
 .modal {
 	width: 408px;
-	min-height: 576px;
+	min-height: 584px;
 	background: #FCFCFC;
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 4px;
@@ -590,6 +651,7 @@ a.logo-marg {
 	transform: translate(-50%, -50%) scale(1);
 	padding-top: 24px;
 	padding-right: 24px;
+	padding-left: 24px;
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -604,7 +666,7 @@ a.logo-marg {
 	display: flex;
 	margin-left: auto;
 	align-items: center;
-
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -631,3 +693,132 @@ a.logo-marg {
 .backdrop.is-hidden .modal {
 	transform: translate(-50%, -50%) scale(0)
 }
+.form-h {
+	margin-top: 24px;
+	margin-bottom: 16px;
+	font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+text-align: center;
+letter-spacing: 0.02em;
+color: var(--common-color);
+
+}
+.form-label {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: #8E8F99;
+	margin-bottom: 4px;
+}
+.form-input{
+width: 360px;
+height: 40px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+outline: transparent;
+padding-top: 11px;
+padding-bottom: 11px;
+padding-left: 38px;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-icon-group{
+	position: relative;
+}
+.input-icon{
+	fill: var(--common-color);
+	position:absolute;
+	top: 50%;
+	left: 16px;
+	transform: translateY(-50%);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus+.input-icon{
+fill: var(--active-color);
+}	
+.form-input:focus{
+border-color: var(--active-color);
+}
+.form-group {
+	margin-bottom: 8px;
+}
+.form-group:nth-of-type(4){
+	margin-bottom: 16px;
+}
+.form-input::placeholder{
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: #8E8F99;
+	position: absolute;
+}
+.text-area{
+	position: relative;
+	padding-left: 16px;
+	min-height: 120px;
+	max-width: 360px;
+}
+.form-label-check>a{
+	font-style: normal;
+	font-size: 12px;
+line-height: 1.33;
+letter-spacing: 0.04em;
+	text-decoration: underline;
+	color: var(--primary-color);
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+margin-left: 5px;
+}
+.form-label-check{
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: #8E8F99;
+	display: flex;
+	align-items: center;
+}
+
+.form-label-check span {
+	content: "";
+	width: 16px;
+height: 16px;
+border: 1.25px solid var(--common-color);
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 2px;
+margin-right: 8px;
+fill: transparent;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	
+}
+.form-checkbox:checked + .form-label-check span{
+	fill: var(--accent-fill-color);
+	background-color: var(--active-color);
+	border: 0;
+}
+.submit-btn{
+	width: 169px;
+height: 56px;
+	padding: 16px 32px;
+	border: none;
+	margin-top: 24px;
+	margin-left: 95px;
+		background: var(--primary-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	color: var(--white-color);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	
+}
+.submit-btn:is(:hover, :focus) {
+background-color: var(--active-color);
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+	0px 2px 2px rgba(0, 0, 0, 0.12);
+color: var(--white-color);
+border-color: transparent;
+}
+	
