--- a/css/styles.css
+++ b/css/styles.css
@@ -540,6 +540,10 @@ a.logo-marg {
 	font-weight: 500;
 	margin-bottom: 16px;
 	margin-top: 0px;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+		color: var(--accent-color);
 }
 
 .soc-med-list-footer {
@@ -565,6 +569,15 @@ a.logo-marg {
 
 .social-media-link-footer:is(:hover, :focus) {
 	background-color: #31D0AA;
+}
+
+.subscr{
+	margin-left: auto;
+}
+.subscribe-form {
+	display: flex;
+	align-items: center;
+	
 }
 .subscribe-header{
 	font-weight: 500;
@@ -667,7 +680,7 @@ color: var(--white-color);
 	margin-left: auto;
 	align-items: center;
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+	margin-bottom: 24px;
 }
 
 .modal-close:is(:hover, :focus) {
@@ -694,7 +707,7 @@ color: var(--white-color);
 	transform: translate(-50%, -50%) scale(0)
 }
 .form-h {
-	margin-top: 24px;
+
 	margin-bottom: 16px;
 	font-weight: 500;
 font-size: 16px;
@@ -711,6 +724,7 @@ color: var(--common-color);
 	letter-spacing: 0.04em;
 	color: #8E8F99;
 	margin-bottom: 4px;
+	display: block;
 }
 .form-input{
 width: 360px;
@@ -759,6 +773,8 @@ border-color: var(--active-color);
 	padding-left: 16px;
 	min-height: 120px;
 	max-width: 360px;
+	resize: none;
+	display: block;
 }
 .form-label-check>a{
 	font-style: normal;
@@ -806,7 +822,9 @@ height: 56px;
 	padding: 16px 32px;
 	border: none;
 	margin-top: 24px;
-	margin-left: 95px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 		background: var(--primary-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
